Add background image and styling

--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -13,21 +13,16 @@
     />
 
     <title>Frontend Mentor | FAQ accordion</title>
-
-    <!-- Feel free to remove these styles or customize in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <div>
-      <h1>FAQs</h1>
+    <div class="background-image">
+      <img
+        src="./assets/images/background-pattern-desktop.svg"
+        alt="background-pattern-desktop"
+      />
+    </div>
+    <div class="main-faq">
+      <h1><img src="./assets/images/icon-star.svg" alt="star" /> FAQs</h1>
       <h2>What is Frontend Mentor, and how will it help me?</h2>
       <p>
         Frontend Mentor offers realistic coding challenges to help developers
