--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
     <link rel="stylesheet" href="styles.css" />
+    <script src="./javascript.js"></script>
     <link
       rel="icon"
       type="image/png"
@@ -17,40 +18,50 @@
   <body>
     <div>
       <div class="background-image"></div>
-      <div class="main-faq">
-        <h1><img src="./assets/images/icon-star.svg" alt="star" /> FAQs</h1>
-        <h2>What is Frontend Mentor, and how will it help me?</h2>
-        <p>
-          Frontend Mentor offers realistic coding challenges to help developers
-          improve their frontend coding skills with projects in HTML, CSS, and
-          JavaScript. It's suitable for all levels and ideal for portfolio
-          building.
-        </p>
-        <h2>Is Frontend Mentor free?</h2>
-        <p>
-          Yes, Frontend Mentor offers both free and premium coding challenges,
-          with the free option providing access to a range of projects suitable
-          for all skill levels.
-        </p>
-        <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
-        <p>
-          Yes, you can use projects completed on Frontend Mentor in your
-          portfolio. It's an excellent way to showcase your skills to potential
-          employers!
-        </p>
-        <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
-        <p>
-          The best place to get help is inside Frontend Mentor's Discord
-          community. There's a help channel where you can ask questions and seek
-          support from other community members.
-        </p>
-      </div>
+      <div class="main-faq-background">
+        <div class="main-faq-text">
+          <h1><img src="./assets/images/icon-star.svg" alt="star" /> FAQs</h1>
 
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+          <h3 onclick="toggleParagraph('firstParagraph')">
+            What is Frontend Mentor, and how will it help me?
+          </h3>
+
+          <p id="firstParagraph">
+            Frontend Mentor offers realistic coding challenges to help
+            developers improve their frontend coding skills with projects in
+            HTML, CSS, and JavaScript. It's suitable for all levels and ideal
+            for portfolio building.
+          </p>
+          <hr />
+          <h3 onclick="toggleParagraph('secondParagraph')">
+            Is Frontend Mentor free?
+          </h3>
+          <p id="secondParagraph">
+            Yes, Frontend Mentor offers both free and premium coding challenges,
+            with the free option providing access to a range of projects
+            suitable for all skill levels.
+          </p>
+          <hr />
+
+          <h3 onclick="toggleParagraph('thirdParagraph')">
+            Can I use Frontend Mentor projects in my portfolio?
+          </h3>
+
+          <p id="thirdParagraph">
+            Yes, you can use projects completed on Frontend Mentor in your
+            portfolio. It's an excellent way to showcase your skills to
+            potential employers!
+          </p>
+          <hr />
+          <h3 onclick="toggleParagraph('fourthParagraph')">
+            How can I get help if I'm stuck on a Frontend Mentor challenge?
+          </h3>
+          <p id="fourthParagraph">
+            The best place to get help is inside Frontend Mentor's Discord
+            community. There's a help channel where you can ask questions and
+            seek support from other community members.
+          </p>
+        </div>
       </div>
     </div>
   </body>
