--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -23,7 +23,11 @@
           <h1><img src="./assets/images/icon-star.svg" alt="star" /> FAQs</h1>
 
           <h3 onclick="toggleParagraph('firstParagraph')">
-            What is Frontend Mentor, and how will it help me?
+            What is Frontend Mentor, and how will it help me?<img
+              src="./assets/images/icon-plus.svg"
+              alt="plus"
+              class="icon"
+            />
           </h3>
 
           <p id="firstParagraph">
@@ -34,7 +38,11 @@
           </p>
           <hr />
           <h3 onclick="toggleParagraph('secondParagraph')">
-            Is Frontend Mentor free?
+            Is Frontend Mentor free?<img
+              src="./assets/images/icon-plus.svg"
+              alt="plus"
+              class="icon"
+            />
           </h3>
           <p id="secondParagraph">
             Yes, Frontend Mentor offers both free and premium coding challenges,
@@ -44,7 +52,11 @@
           <hr />
 
           <h3 onclick="toggleParagraph('thirdParagraph')">
-            Can I use Frontend Mentor projects in my portfolio?
+            Can I use Frontend Mentor projects in my portfolio?<img
+              src="./assets/images/icon-plus.svg"
+              alt="plus"
+              class="icon"
+            />
           </h3>
 
           <p id="thirdParagraph">
@@ -55,6 +67,7 @@
           <hr />
           <h3 onclick="toggleParagraph('fourthParagraph')">
             How can I get help if I'm stuck on a Frontend Mentor challenge?
+            <img src="./assets/images/icon-plus.svg" alt="plus" class="icon" />
           </h3>
           <p id="fourthParagraph">
             The best place to get help is inside Frontend Mentor's Discord
